# cloud-vision-samples

./: .gitignore  README.md  entry_points.cfg  setup.cfg
cloud_vision_samples/: .gitignore  args.py  detection_types.py  extract.py  joyson.py  plot_vertices.py  request_vision.py  structure.py  vision_api.py
