[metadata]
name = cloud_vision_samples
version = 0.1
url = https://github.com/malta-yamato/cloud_vision_samples
author = Yamato Malta
author_email = malta.yamato@gmail.com
license = MIT
description = program samples using Google Cloud Vision API
long_description = file: README.md

[options]
packages = find:
entry_points = file: entry_points.cfg
install_requires = requests; matplotlib; numpy; Pillow
